--- a/the_book.qmd
+++ b/the_book.qmd
@@ -1,5 +1,6 @@
 ---
 title: "The Book"
+author : "Sam Assaf"
 format: html
 ---
 
@@ -20,6 +21,12 @@ You can add options to executable code like this
 ```{r}
 #| echo: false
 2 * 2
+
 ```
 
 The `echo: false` option disables the printing of code (only output is displayed).
+
+<font size="18"> **The Book** <font>
+
+* still need to center this
+
