--- a/the_book.qmd
+++ b/the_book.qmd
@@ -1,7 +1,11 @@
 ---
 title: "The Book"
 author : "Sam Assaf"
-format: html
+format:
+  html:
+    toc: true
+    toc-location: left
+    self-contained: true
 ---
 
 ## Quarto
